tests/reference/ast-fixed_form_implicit3-7f279ac.stderr
syntax error: Internal Compiler Error: syntax is ambiguous in the parser
  --> tests/fixed_form_implicit3.f:13:7
   |
13 |       CHARACTER*(*) FUNCTION CSTAR(A)
   |       ^^^^^^^^^^^^^ 
